--- a/src/App.css
+++ b/src/App.css
@@ -21,12 +21,14 @@ header button.rounded-circle:hover svg{color: #0858f7 !important; transition: al
 
 .search svg{font-size: 18px; color: #292929;}
 
+.myAccWrapper{width: 300px;}
 .myAcc{text-align: left !important; color: #0858f7 !important; text-transform: capitalize;}
-.myAcc .userImg .rounded-circle{display: flex; align-items: center; justify-content: center; overflow: hidden; width: 40px; height: 40px; border: 1px solid #0858f7; padding: 2px; border-radius: 100%;} 
-.myAcc .userImg .rounded-circle{display: flex; align-items: center; justify-content: center; overflow: hidden; width: 100%; height: 100%; cursor: pointer; position: relative;}
+/* .myAcc .userImg{ } */
+.myAcc .userImg .rounded-circle{display: flex; gap: 10px; align-items: center; justify-content: center; overflow: hidden; width: 40px; height: 40px; border: 1px solid #0858f7; padding: 2px; border-radius: 50%; text-align: right;} 
+.myAcc .userImg .rounded-circle{display: flex; gap: 10px; align-items: center; justify-content: center; overflow: hidden; width: 20%; height: 20%; cursor: pointer; position: relative;}
 .myAcc .userImg .rounded-circle img{object-fit: cover; width: 100%; height: 100%;}
 
-.myAcc .userInfo{padding-left: 10px;}
+.myAcc .userInfo{padding-left: 10px; width: 300px;}
 .myAcc .userInfo h4{font-size: 15px; font-weight: 600; margin-bottom: 0px; color: #292929;}
 .myAcc .userInfo p{margin-top: 0px; font-size: 12px; color: #000; opacity: 0.7;}
 
